🎉auto update by Gmeek action

--- a/backup/子网划分.md
+++ b/backup/子网划分.md
@@ -3,7 +3,7 @@
 **C类IP地址：** 网络号 24位，主机号8位     **范围**：192.0.0.0 到 223.255.255.255
 **IP地址的位数 = 网络号的位数 + 主机号的位数**
 ### 注意：
-IP 地址块 `142.12.23.64/26` 表示前 26 位是网络号，剩下的部分是主机号。一个 IPv4 地址共有 32 位，因此主机号的位数是 `32 - 26 = 6` 位。虽然 IP 地址最初是按 A 类、B 类和 C 类来分类的，但现在普遍使用的是无类别域间路由（CIDR），也就是使用斜杠表示法（如 /26），来灵活地划分网络号和主机号。/26 表示的就是 26 位的网络号，主机号是 6 位，与 B 类默认的 16 位无关。
+IP 地址块 $142.12.23.64/26$ 表示前 26 位是网络号，剩下的部分是主机号。一个 IPv4 地址共有 32 位，因此主机号的位数是 6位。虽然 IP 地址最初是按 A 类、B 类和 C 类来分类的，但现在普遍使用的是**无类别域间路由（CIDR）**，也就是使用斜杠表示法（如 /26），来灵活地划分网络号和主机号。/26 表示的就是 26 位的网络号，主机号是 6 位，与 B 类默认的 16 位无关。
 
 **子网掩码的作用就是定义网络号和主机号的边界。**
 一个网络，主机号有$x$位，则这个网络共包含$2^x$个地址，可分配给主机的IP地址是$2^x-2$个，因为网络地址和广播地址不可分配。网络中的第一个IP地址（全0的主机号部分）。这个地址用来标识整个网络，而不能分配给任何主机。比如在IPv4中，如果网络号是192.168.1.0/24，那么192.168.1.0就是网络地址。网络中的最后一个IP地址（全1的主机号部分）。这个地址用于向网络中的所有主机发送广播消息。比如192.168.1.0/24网络中的广播地址是192.168.1.255。
